build (theme): replace minima theme with jekyll-theme-tactile

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  jekyll
 github: [metadata]
 
 # Build settings
-theme: minima
+theme: jekyll-theme-tactile
 plugins:
   - jekyll-feed
 
