--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Git-Conga
+tagline: Simple and straight-forward Git Commits
 description: >- # this means to ignore newlines until "baseurl:"
   Simple and straight-forward Git Commits
 baseurl: "" # the subpath of your site, e.g. /blog
