--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Git-Conga
-tagline: Simple and straight-forward Git Commits
+title: Git-By-Numbers
+tagline: Commmit messages - Useful. Simple. Beautiful.
 description: >- # this means to ignore newlines until "baseurl:"
   Simple and straight-forward Git Commits
 baseurl: "" # the subpath of your site, e.g. /blog
