--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Git-By-Numbers
+title: Commit-It-Simple
 tagline: Commmit messages - Useful. Simple. Beautiful.
 description: >- # this means to ignore newlines until "baseurl:"
   Simple and straight-forward Git Commits
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://git-conga.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://commit-it-simple.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 github: [metadata]
 logo: "logo.png"
 
