--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Commit-It-Simple
-tagline: Commmit messages - Useful. Simple. Beautiful.
+tagline: Commit messages - Useful. Simple. Beautiful.
 description: >- # this means to ignore newlines until "baseurl:"
   Simple and straight-forward Git Commits
 baseurl: "" # the subpath of your site, e.g. /blog
